--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -125,7 +125,7 @@
             </div>
 
             <div class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" href={% url "activities" %} id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     活動一覽
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -142,31 +142,6 @@
             <a class="nav-item nav-link" href={% url "contact" %}>聯絡我們</a>
 
             <ul class="navbar-nav">
-                {% if user.is_authenticated %}
-                <li {% if 'dashboard' in request.path %} class='nav-item active' 
-                {% else %} class='nav-item' {% endif %}>
-                <a class="nav-link" href={% url 'dashboard' %}>Welcome {{user.username}} (dashboard)</a>
-                </li> 
-                <li class='nav-item'>
-                  <a href="javascript:{document.getElementById('logout').submit()}" class='nav-link'>
-                  <i class='fas fa-sign-out-alt'></i> Logout   
-                  </a>
-                  <form action="{% url 'logout' %}" method="POST" id="logout">
-                    {% csrf_token %}
-                    <input type='hidden'/>
-                  </form>
-                </li>   
-                {% else %}
-                <li {% if 'login' in request.path %}
-               class="nav-item active" 
-                {% else %}
-                 class="nav-item " {% endif %}>
-                  <a class="nav-link" href={% url "login" %}>
-                    <i class="fas fa-sign-in-alt"></i>
-                    Login</a
-                  >
-                </li>
-                {% endif %}
             </ul>
 
             <div class="social-icons">
