--- a/templates/pages/values_education.html
+++ b/templates/pages/values_education.html
@@ -15,17 +15,18 @@
             text-align: center;
         }
 
-        p-class {
+        .p-class {
             line-height: 1.6;
             margin-bottom: 15px;
-            font-size: 25px;
-            text-align: left;
+            font-size: 20px;
+            text-align: center; /* Center text in each paragraph */
+            width: 100%; /* Adjust width to control spacing */
         }
 
         h2 {
             text-align: center;
             font-size: 30px;
-            margin-top: 30px;
+            margin-top: 50px;
         }
 
         .values-container {
