--- a/templates/contact/contact.html
+++ b/templates/contact/contact.html
@@ -3,6 +3,7 @@
 {% block title %}Contact Us{% endblock %}
 {% block content %}
 
+<div class="fade-in">
 <div class="container mt-4" style="margin-bottom: 50px;"> <!-- Add margin-bottom here -->
     <div class="card shadow mx-auto" style="max-width: 600px;">
         <div class="card-body">
@@ -53,6 +54,7 @@
             {% endif %}
         </div>
     </div>
+</div>
 </div>
 
 <!-- Loader CSS -->
