--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -292,7 +292,7 @@
 </head>
 <body>
     
-
+    <div class="fade-in">
     <div class="quote">
         人的發展及成長不應受任何形式的限制
     </div>
@@ -359,7 +359,7 @@
         <img src="{% static 'img/Mechanism.avif' %}" alt="Mechanism logo">
     </div>
 
-    
+    </div>
 </body>
 </html>
 
