--- a/templates/pages/values_education.html
+++ b/templates/pages/values_education.html
@@ -61,6 +61,8 @@
         .value-item a {
             color: black; /* Set text color to black for the anchor tag */
             text-decoration: none; /* Remove underline from the anchor tag */
+            display: flex;
+            align-items: center; /* Center items horizontally */
         }
 
         .value-item img {
@@ -128,6 +130,7 @@
         }
 </style>
 <body>
+<div class="fade-in">
 <div class="body-class">
     <br>
     <br>
