--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -134,11 +134,11 @@
                     <a class="dropdown-item" href="#">特殊教育</a>
                     <a class="dropdown-item" href="#">個別訓練</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href={% url "index" %}>其他服務</a>
+                    <a class="dropdown-item" href={% url "contact" %}>其他服務</a>
                 </div>
             </div>
             <a class="nav-item nav-link" href={% url "events" %}>過往活動</a>
-            <a class="nav-item nav-link" href={% url "about" %}>Blog</a>
+            <a class="nav-item nav-link" href={% url "post_list" %}>blog</a>
             <a class="nav-item nav-link" href={% url "contact" %}>聯絡我們</a>
 
             <ul class="navbar-nav">
